--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,13 @@
             <artifactId>mybatis</artifactId>
             <version>3.5.2</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.17</version>
+        </dependency>
+
 
     </dependencies>
 
@@ -124,7 +131,8 @@
                 <artifactId>flyway-maven-plugin</artifactId>
                 <version>5.2.4</version>
                 <configuration>
-                    <url>jdbc:h2:file:C:\Users\Administrator\Documents\GithubData\crawler\news</url>
+<!--                    <url>jdbc:h2:file:C:\Users\Administrator\Documents\GithubData\crawler\news</url>-->
+                    <url>jdbc:mysql://192.168.99.100:3306/news?characterEncoding=utf8</url>
                     <user>root</user>
                     <password>root</password>
                 </configuration>
